--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="desc">Python, Node.js, Golang Developers</div>
       <div class="sm">
         <a href="http://rsdev.ml/telegram?username=north_afk" class="fab fa-telegram"></a>
-        <a href="#" class="fab fa-github"></a>
+        <a href="https://github.com/north-developers" class="fab fa-github"></a>
         <a href="#" class="fab fa-accessible-icon"></a>
       </div>
       <a href="#" class="contact-btn">Telegram</a>
