--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <div class="sm">
         <a href="http://rsdev.ml/telegram?username=north_afk" class="fab fa-telegram"></a>
         <a href="https://github.com/north-developers" class="fab fa-github"></a>
-        <a href="#" class="fab fa-accessible-icon"></a>
+        <a href="https://github.com/north-developers/north-developers.github.io" class="fab fa-accessible-icon"></a>
       </div>
-      <a href="#" class="contact-btn">Telegram</a>
+      <a href="http://rsdev.ml/telegram?username=north_afk" class="contact-btn">Telegram</a>
     </div>
   </div>
 </body>
