--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="img/aye.png" alt="">
       </div>
       <div class="name">North_commandef</div>
-      <div class="desc">Python, Golang Developers</div>
+      <div class="desc">Python, Node.js, Golang</div>
       <div class="sm">
         <a href="http://rsdev.ml/telegram?username=north_afk" class="fab fa-telegram"></a>
         <a href="https://github.com/north-developers" class="fab fa-github"></a>
