--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       <div class="name">North_commandef</div>
       <div class="desc">Python, Node.js, Golang</div>
       <div class="sm">
-        <a href="http://rsdev.ml/telegram?username=north_afk" class="fab fa-telegram"></a>
+        <a href="http://rsdev.ml/telegram?username=north_dev" class="fab fa-telegram"></a>
         <a href="https://github.com/north-developers" class="fab fa-github"></a>
         <a href="https://github.com/north-developers/north-developers.github.io" class="fab fa-accessible-icon"></a>
       </div>
-      <a href="http://rsdev.ml/telegram?username=north_afk" class="contact-btn">Telegram</a>
+      <a href="http://rsdev.ml/telegram?username=north_dev" class="contact-btn">Telegram</a>
     </div>
   </div>
 </body>
