--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <div class="pic">
         <img src="img/aye.png" alt="">
       </div>
-      <div class="name">North_commandef</div>
+      <div class="name">North_dev</div>
       <div class="desc">Python, Node.js, Golang</div>
       <div class="sm">
-        <a href="http://rsdev.ml/telegram?username=north_dev" class="fab fa-telegram"></a>
+        <a href="http://t.me/north_dev" class="fab fa-telegram"></a>
         <a href="https://github.com/north-developers" class="fab fa-github"></a>
         <a href="https://github.com/north-developers/north-developers.github.io" class="fab fa-accessible-icon"></a>
       </div>
