--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="North's Landing Page">
-  <title>North_commandef</title>
+  <title>North_dev</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -17,11 +17,11 @@
       <div class="name">North_commandef</div>
       <div class="desc">Python, Node.js, Golang</div>
       <div class="sm">
-        <a href="http://rsdev.ml/telegram?username=north_dev" class="fab fa-telegram"></a>
+        <a href="http://t.me/north_dev" class="fab fa-telegram"></a>
         <a href="https://github.com/north-developers" class="fab fa-github"></a>
         <a href="https://github.com/north-developers/north-developers.github.io" class="fab fa-accessible-icon"></a>
       </div>
-      <a href="http://rsdev.ml/telegram?username=north_dev" class="contact-btn">Telegram</a>
+      <a href="http://t.me/north_dev" class="contact-btn">Telegram</a>
     </div>
   </div>
 </body>
